# brick-example-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  demo.py  docker-compose.yml  docker-compose.yml.template  entry.py  gen_sample_data.py  google.py  main.py  main_dev.py  openapi.json  prestart.sh  pyproject.toml  pytest.ini  requirements.txt  run_app  run_docker  setup.cfg  setup.py  test.py  test_grafana.py
ansible/: brick-server-playbook.yml  brickserver.service  virtuoso.service
archived_tests/local/: test_actuation.py  test_queries.py  test_timeseries.py
archived_tests/remote/: actuation.py  common.py  grafana_body.json  test_actuation.py  test_entities.py  test_queries.py
brick_server/: __init__.py  apis.py  configs.py  dbs.py  dependencies.py  dummy_frontend.py  exceptions.py  helpers.py  models.py
brick_server/auth/: auth_server.py  authorization.py  common.py  models.py
brick_server/extensions/: lockmanager.py  pglocks.py
brick_server/interfaces/: grafana.py
brick_server/interfaces/actuation/: dummy_actuation.py
brick_server/interfaces/timeseries/: base_timeseries.py  brick_timeseries.py
brick_server/minimal/: __main__.py  app.py  config.py  dbs.py  dependencies.py  descriptions.py  dummy_frontend.py  exceptions.py  helpers.py  init.py  models.py  openapi.py  schemas.py  utils.py
brick_server/minimal/auth/: auth_server.py  authorization.py  checker.py  jwt.py
brick_server/minimal/config/: errors.py  events.py  manager.py
brick_server/minimal/config/settings/: base.py  development.py  production.py  staging.py
brick_server/minimal/extensions/: lockmanager.py
brick_server/minimal/interfaces/: __init__.py  cache.py  grafana.py  graphdb.py  mongodb.py  namespaces.py
brick_server/minimal/interfaces/actuation/: __init__.py  actuation_interface.py  actuation_server_pb2.py  actuation_server_pb2_grpc.py  bacnet_actuation.py  base_actuation.py  dummy_actuation.py  real_actuation.py  validator.py
brick_server/minimal/interfaces/actuation/bacnet/: __init__.py  actuation_server_pb2_grpc.py
brick_server/minimal/interfaces/actuation/metasys/: __init__.py  actuate_pb2.py  actuate_pb2.pyi  actuate_pb2_grpc.py  test_actuator.py
brick_server/minimal/interfaces/timeseries/: __init__.py  asyncpg_timeseries.py  base_timeseries.py  brick_timeseries.py  timeseries_interface.py
brick_server/minimal/interfaces/timeseries/asyncpg/: __init__.py
brick_server/minimal/interfaces/timeseries/influxdb/: __init__.py
brick_server/minimal/models/: __init__.py  domain.py  user.py
brick_server/minimal/schemas/: __init__.py  actuation.py  base.py  domain.py  entity.py  oauth_account.py  permission.py  timeseries.py  user.py
brick_server/minimal/securities/: auth.py  checker.py  oauth.py
brick_server/minimal/services/: __init__.py  _entities.py  _queries.py  actuation.py  auth.py  base_service.py  common.py  data.py  domain.py  entities.py  grafana.py  queries.py  query.py  user.py
brick_server/minimal/tests/: common.py  conftest.py  test_entities.py  test_queries.py  test_timeseries.py  utils.py
brick_server/minimal/utilities/: _models.py  _schemas.py  dependencies.py  descriptions.py  exceptions.py  logging.py  utils.py
brick_server/services/: actuation.py  base_service.py  common.py  data.py  entities.py  grafana.py  models.py  namespaces.py  queries.py
brick_server/services/actuation/: models.py  resources.py
brick_server/services/data/: models.py  resources.py
brick_server/services/entities/: models.py  resources.py
brick_server/services/queries/: models.py  resources.py
configs/: configs.json  configs.json.template  start-reload.sh  start.sh
configs/grafana/: datasources.yaml  grafana.ini
docker/: init_postgis.sh  prestart.sh  start-reload.sh  start.sh
examples/: gen_sample_data.py  test_api.py
examples/data/: bldg.ttl  ebu3b_brick.ttl  ion.ttl
openapi/: brick_simple.yaml
sample_data/: gis_test.ttl
tests/: _test_entities.py  _test_grafana.py  common.py  conftest.py  data.py  grafana_body2.json  test.py  test_domain.py  test_entities.py  test_queries.py  test_sparql.py  test_timeseries.py  utils.py
tests/local/: common.py  test_entities.py
tests/remote/: common.py  data.py  test_actuation.py  test_entities.py  test_grafana.py  test_queries.py  test_timeseries.py
tools/: gen_selfsigned_certificate  get_jwt_token  register_admin
