[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.poetry]
authors = ["Brick Dev Team <x5fu@ucsd.edu>"]
description = "brick server minimal"
license = "BSD-3-Clause"
name = "brick-server-minimal"
packages = [
    { include = "brick_server" },
]
repository = "https://gitlab.com/mesl/brickserver/brick-server-minimal"
version = "0.1.0"

[tool.poetry.dependencies]
aiofiles = "^0.7.0"
aiosparql = "^0.12.0"
arrow = "^1.1.1"
asgi-lifespan = { version = "^1.0.1", optional = true }
asyncpg = "^0.24.0"
Authlib = "^0.15.4"
brick-data = {git = "https://github.com/jbkoh/brick_data.git", rev = "master"}
docker = "^5.0.2"
fastapi = "^0.68.1"
fastapi-rest-framework = {git = "https://github.com/joint-online-judge/fastapi-rest-framework", rev = "master"}
fastapi-utils = "^0.2.1"
grpcio = "^1.40.0"
httpx = "0.12.0"
itsdangerous = "^2.0.1"
jedi = "^0.18.0"
mongoengine = "^0.23.1"
numpy = "^1.21.2"
pandas = "^1.3.3"
protobuf = "^3.17.3"
psycopg2-binary = "^2.9.1"
pydantic = "^1.8.2"
PyJWT = "^2.1.0"
pyparsing = "2.3.1"
pytest = { version = "^6.2.5", optional = true }
pytest-asyncio = { version = "^0.15.1", optional = true }
pytest-depends = { version = "^1.0.1", optional = true }
pytest-env = { version = "^0.6.2", optional = true }
pytest-ordering = { version = "^0.6", optional = true }
python = ">=3.8,<3.11"
python-multipart = "^0.0.5"
PyYAML = "^5.4.1"
rdflib = "^4.2.2"
redis = "^3.5.3"
requests = "^2.26.0"
timeout-decorator = "^0.5.0"
uvicorn = "^0.15.0"
Werkzeug = "^2.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[tool.poetry.extras]
test = [
    "asgi-lifespan",
    "pytest",
    "pytest-asyncio",
    "pytest-depends",
    "pytest-env",
    "pytest-ordering",
]

[tool.pycln]
all = true

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
log_cli = 1
