[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.poetry]
authors = ["Brick Dev Team <x5fu@ucsd.edu>"]
description = "brick server minimal"
license = "BSD-3-Clause"
name = "brick-server-minimal"
packages = [
    { include = "brick_server" },
]
repository = "https://gitlab.com/mesl/brickserver/brick-server-minimal"
version = "0.1.0"

[tool.poetry.dependencies]
aiofiles = "^0.7.0"
aiosparql = "^0.12.0"
arrow = "^1.1.1"
asyncpg = "^0.24.0"
Authlib = "^0.15.4"
brick-data = {git = "https://github.com/jbkoh/brick_data.git", rev = "master"}
click-default-group = "^1.2.2"
fastapi = "^0.78.0"
fastapi-rest-framework = {git = "https://github.com/joint-online-judge/fastapi-rest-framework", rev = "master"}
fastapi-utils = "^0.2.1"
grpcio = "^1.42.0"
httpx = "^0.23.0"
itsdangerous = "^2.0.1"
mongoengine = "^0.23.1"
protobuf = "^3.19.5"
psycopg2-binary = "^2.9.1"
pydantic = "^1.8.2"
PyJWT = "^2.1.0"
pyparsing = "2.3.1"
python = ">=3.7,<3.11"
python-multipart = "^0.0.5"
PyYAML = "^5.4.1"
rdflib = "^4.2.2"
requests = "^2.26.0"
tenacity = "^8.1.0"
timeout-decorator = "^0.5.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
asgi-lifespan = "^1.0.1"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
pytest-depends = "^1.0.1"
pytest-env = "^0.6.2"
pytest-ordering = "^0.6"

[tool.pycln]
all = true

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
log_cli = 1
